2020-12-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Acknowledge struct
	labels.
	* testsuite/poke.pkl/scons-label-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_func): Emit a `note' instruction
	with the function name only if the function actually has a name.

2020-12-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_print_stmt): use
	pkl_ast_type_promoteable_p.
	* libpoke/pkl-ast.c (pkl_ast_type_promoteable_p): VOID can't be
	promoted to anything.
	* testsuite/poke.pkl/printf-diag-18.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-20  Luca Saiu  <positron@gnu.org>

	* libpoke/pvm.jitter (r): Change the number of fast
	registers, enable slow registers.

2020-12-20  Luca Saiu  <positron@gnu.org>

	* libpoke/pvm.jitter (vm): Remove stack specifications...
	(s, t, x): ...And add them back to their new sections.
	(r): Adapt to new syntax.
	These changes adapt poke to Jitter's new syntax.

2020-12-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk (hserver_print_hl): New function.

2020-12-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk: New file.
	* poke/Makefile.am (dist_pkgdata_DATA): Add pk-hserver.pk.
	* poke/pk-hserver.c (pk_hserver_init): Load pk-hserver.pk.
	(pk_hserver_port): Get the value of the port from the poke value.
	Turn pk_hserver_port and pk_hserver_tokens into pk values.
	(pk_hserver_get_token): Rewrite to use the hserver_get_token.
	(pk_hserver_token): New function.
	(pk_hserver_make_hyperlink): Rewrite to call the Poke code.
	(pk_hserver_start): Rename from pk_hserver_init.

2020-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Prototype for pk_decl_set_val.
	* libpoke/libpoke.c (pk_decl_set_val): New function.

2020-12-20  Jose E. Marchesi  <jemarch@gnu.org>
